# RepoPluse

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.ar.md  README.md  REQUIREMENTS.md  SECURITY.md  USAGE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: checks.md  roadmap.md
examples/: sample-report.md
repopulse/: analyzer.py  cli.py  config.py  github_client.py  models.py  report.py  scoring.py  url_parser.py  utils.py
repopulse/checks/: __init__.py  actions_check.py  activity_check.py  dependencies_check.py  gitignore_check.py  license_check.py  package_check.py  readme_check.py  security_check.py  sensitive_files_check.py  structure_check.py  tests_check.py
tests/: test_checks.py  test_cli.py  test_github_client.py  test_report.py  test_scoring.py  test_url_parser.py
