[project]
name = "repopulse"
version = "0.1.0"
description = "A CLI tool that analyzes GitHub repository health and generates quality reports."
authors = [{ name = "Ali Assiri" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.26.5",
    "requests>=2.31.0",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0"
]

[project.scripts]
repopulse = "repopulse.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
